--- a/css/main_custom.css
+++ b/css/main_custom.css
@@ -1,5 +1,5 @@
 * {
-    color: #fff !important;
+    color: #fff;
 }
 
 @font-face {
@@ -80,10 +80,6 @@ a:visited {
 .iconShop{
 }
 
-.iconSettings { 
-	background-image:url(https://cdn.discordapp.com/attachments/809026786079277086/831466081062879240/911-9117890_zen-transparent-image-zen-circle-transparent.png); 
-
-}
 
 .{
   	background-image:url(https://cdn.discordapp.com/attachments/809026786079277086/831466081062879240/911-9117890_zen-transparent-image-zen-circle-transparent.png); 
@@ -155,6 +151,8 @@ a:visited {
     content: url(https://cdn.discordapp.com/attachments/830001716791345182/831511969289994280/zen.png);
     transition: 0.3s;
     border-radius: 20px;
+    border: 5px solid #00FFFF;
+
 }
 
 .menuItem {
@@ -426,6 +424,7 @@ a:visited {
 
 
 #chatList {
+  background-color: rgba(0,0,40,0.3);
     text-align: left;
 }
 
@@ -434,13 +433,11 @@ a:visited {
     font-size: 16px;
     width: -webkit-fill-available;
     margin: 0px;
-    background-color: rgba(0,0,0,0.3) !important;
     border-radius: 0;
 }
 
 #chatInput {
     text-align: left;
-    background-color: transparent;
 }
 
 #chatInput:focus {
@@ -562,7 +559,7 @@ input:checked+.sliderSml {
     color: #fff;
 }
 .accountButton {
-  width: 200px;
+  width: 335px;
   box-shadow: none !important;
   border: 2px solid #fff;
   cursor: pointer;
@@ -692,6 +689,7 @@ input:checked+.sliderSml {
 
 #timerDisplay {
  transform: scale(1.2);
+ background-color: rgba(0,0,40,0.4);
 }
 
 #timerIcon {
@@ -700,7 +698,6 @@ input:checked+.sliderSml {
 }
 
 #victorySub {
-    content: "VICTORY";
 }
 
 
@@ -762,7 +759,7 @@ input:checked+.sliderSml {
 
 
 #leaderDisplay {
-    background-color: rgba(0,0,0,0.2) !important;
+    background-color: var(--theme) !important;
 }
 
 
@@ -1138,13 +1135,14 @@ transform: scale(1.2);
 #ammoDisplay {
   opacity: 1;
     background-color: rgba(0,0,40, 1) !important;
+    border: 3px solid #00FFFF;
     border-radius: 10px;
-    padding: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
     position: fixed;
-    bottom:5%;
-    left: 50%;
-    justify-content: center;
-    text-align: center;
+    bottom:3%;
+    left: 47%;
+
 }
 #ammoMax {
   opacity: 1;
@@ -1159,17 +1157,64 @@ transform: scale(1.2);
 }
 #ammoIcon{display: none;}
 
-.weapIcon{
-    filter: sepia(100%); 
+#weapDisplay {
+  padding-top: 50px;
+  border-radius: 10px;
+    background-color: var(--theme);
+    position: absolute;
+    z-index: 1;
+    right: 20px;
+    bottom: 77%;
+}
 
+.weapIcon{
+  margin-right: 10px;
+  margin-bottom: 30px;
+  filter: sepia(100%); 
   filter: brightness(1);
 }
 
 .weapIcon:not([style*="1"]) {
   bottom: 20px !important;
-    opacity: 0 !important;
+  opacity: 0.2 !important;
+}
+
+.weapIcon[style*="1"] {
+  bottom: 20px !important;
+  opacity: 1 !important;
 }
 
 .weapKey{
   display: none;
+}
+
+#killsIcon,#deathsIcon,#streakIcon,#kdIcon {
+    width: 38px;
+    height: 38px;
+}
+
+#killsVal,#deathsVal,#streakVal,#myScoreVal,#kdVal {
+    color: rgba(255,255,255,1);
+}
+
+.inputGrey, .inputGrey2, .formInput {
+    background: rgba(255,255,255,1);
+    color: black;
+}
+
+option {
+    background-color: var(--theme);
+}
+
+
+#aHolder {
+  display: none !important;
+}
+
+#healthBar{
+    display: none;
+}
+#healthValue {
+ bottom: 0;
+    font-size: 40px !important;
 }
